--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,9 +192,13 @@ android {
 }
 
 dependencies {
+    
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    //firebase auth 
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
