--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.2.4",
+    "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.2.4",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "@types/react-native-vector-icons": "^6.4.10",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "2.2.4",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webrtc": "^1.94.1"
   },
