--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-native": "0.67.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-gradient-icon": "^0.1.2",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webrtc": "^1.94.1"
   },
