--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.67.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-gradient-icon": "^0.1.2",
     "react-native-modal": "^13.0.0",
@@ -39,7 +40,8 @@
     "react-native-webrtc": "^1.94.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -48,6 +50,7 @@
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.15",
     "@types/react-native-webrtc": "^1.75.5",
+    "@types/uuid": "^8.3.4",
     "babel-jest": "^27.4.6",
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
