--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-get-random-values": "^1.7.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-gradient-icon": "^0.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "2.2.4",
