--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.6.6",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-date-picker": "^4.1.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-get-random-values": "^1.7.2",
