--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.2.4",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-native-voice/voice": "^3.2.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.6",
